--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="https://images.pexels.com/photos/13664893/pexels-photo-13664893.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+<body background="https://media.istockphoto.com/photos/blue-sky-and-white-clouds-background-on-daytime-picture-id1363189237?k=20&m=1363189237&s=170667a&w=0&h=q_Hv8y7xRraKu45XykexDk5OjTihiS8YdC7ONbz23bY=">
    <div class="flex-item">
     <div class="flex-item1">Welcome to DHABA<br> where you get quality<br>food</div>
     <nav id="nav">
